# natvis4qt

./: .codespell-ignore.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SUPPORT.md  release-please-config.json
.github/workflows/: build-and-publish.yaml  lints.yml  pre-commit.yml  sync-upstream-natvis.yml
natvis/: CMakeLists.txt  CMakePresets.json  qt5.natvis  qt6-extension.natvis  qt6-json.natvis  qt6.natvis
natvis/test/: container_types.h  core_types.h  gui_types.h  main.cpp  network_types.h  pass1.json  variant_types.h  widgets_types.h
src/: builder.rs  core.rs  main.rs  merger.rs
src/app/: core.rs  main.rs  natvis.rs
src/builder/: builder.rs
