[package]
name = "natvis4qt"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "natvis4qt"
path = "src/app/main.rs"

[[bin]]
name = "natvis-builder"
path = "src/builder/builder.rs"

[dependencies]
dirs = "6.0"
cliclack = "0.3.5"
ctrlc = "3.1"
console = "0.15"
clap = { version = "4.5", features = ["derive"] }
preferences = "2.0"

