[package]
name = "natvis4qt"
version = "0.8.1"
edition = "2024"
rust-version = "1.90"
description = "Install Qt natvis file for Visual Studio debugger"
license = "MIT"
repository = "https://github.com/narnaud/natvis4qt"
readme = "README.md"
keywords = [ "cli", "qt", "debugger", "natvis" ]
categories = [ "command-line-utilities", "development-tools" ]
exclude = [ ".github/" ]

[dependencies]
dirs = "6.0"
cliclack = "0.3.9"
ctrlc = "3.5"
console = "0.16"
clap = { version = "4.5", features = [ "derive" ] }
preferences = "2.0"

[profile.release]
lto = true
strip = true
